--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
+asn1crypto==0.24.0
+bcrypt==3.1.7
+cffi==1.12.3
+cryptography==2.7
 Django==2.2.1
 django-appconf==1.0.3
 django-compressor==2.3
+django-mysql==3.2.0
+fabric==2.4.0
+invoke==1.2.0
+mysqlclient==1.4.2
+paramiko==2.5.0
 posts==0.2.2
 psycopg2==2.8.2
+pycparser==2.19
+PyNaCl==1.3.0
 pytz==2019.1
 rcssmin==1.0.6
 rjsmin==1.1.0
