--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "animate.css": "^3.7.1",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "gulp-clean-css": "^4.2.0",
     "jquery": "^3.4.1",
-    "tooltip.js": "^1.3.2",
+    "npm-check": "^5.9.0",
+    "tooltip.js": "^1.3.3",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.2"
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "gulp": "^4.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
