--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,22 @@
-argon2-cffi==19.1.0
-asgiref==2.3.2
 asn1crypto==0.24.0
-async-timeout==3.0.1
-attrs==19.1.0
-autobahn==19.3.2
-Automat==0.7.0
-bcrypt==3.1.6
-certifi==2019.3.9
-cffi==1.12.2
-channel==0.1.0
-channels==2.1.7
-chardet==3.0.4
-constantly==15.1.0
+bcrypt==3.1.7
+cffi==1.12.3
 cryptography==2.7
-daphne==2.2.5
-defusedxml==0.6.0
-Django==2.1.4
-django-allauth==0.39.1
+Django==2.2.7
+django-appconf==1.0.3
+django-compressor==2.3
 django-mysql==3.2.0
-djangorestframework==3.10.0
-docker==3.7.2
-docker-pycreds==0.4.0
 fabric==2.4.0
-geographiclib==1.49
-geopy==1.18.1
-hyperlink==18.0.0
-idna==2.8
-incremental==17.5.0
 invoke==1.2.0
 mysqlclient==1.4.2
-oauthlib==3.0.1
 paramiko==2.5.0
-Pillow==6.1.0
+posts==0.2.2
 psycopg2==2.8.2
 pycparser==2.19
-PyHamcrest==1.9.0
 PyNaCl==1.3.0
-pypiwin32==223
-python3-openid==3.1.0
-pytz==2018.7
-pywin32==224
-redis==3.2.1
-requests==2.21.0
-requests-oauthlib==1.2.0
+pytz==2019.1
+rcssmin==1.0.6
+rjsmin==1.1.0
 six==1.12.0
-Twisted==18.9.0
-txaio==18.8.1
-urllib3==1.24.3
-websocket-client==0.56.0
-zope.interface==4.6.0
+sqlparse==0.3.0
+virtualenv==16.5.0
