--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,28 @@
-asgiref==3.2.3
+appdirs==1.4.3
+asgiref==3.2.5
 asn1crypto==1.3.0
 bcrypt==3.1.7
-cffi==1.12.3
+cffi==1.14.0
 cryptography==2.8
+distlib==0.3.0
 Django==3.0.4
 django-appconf==1.0.3
 django-compressor==2.4
 django-mysql==3.2.0
-fabric==2.4.0
-invoke==1.2.0
+fabric==2.5.0
+filelock==3.0.12
+importlib-metadata==1.5.0
+invoke==1.4.1
 mysqlclient==1.4.2
-paramiko==2.5.0
+paramiko==2.7.1
 posts==0.2.2
-psycopg2==2.8.2
-pycparser==2.19
+psycopg2==2.8.4
+pycparser==2.20
 PyNaCl==1.3.0
-pytz==2019.1
+pytz==2019.3
 rcssmin==1.0.6
 rjsmin==1.1.0
-six==1.12.0
-sqlparse==0.3.0
-virtualenv==16.5.0
+six==1.14.0
+sqlparse==0.3.1
+virtualenv==20.0.10
+zipp==3.1.0
