--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,12 @@ fabric==2.5.0
 filelock==3.0.12
 importlib-metadata==1.6.0
 invoke==1.4.1
-mysqlclient @ file:///C:/Users/navid/Downloads/mysqlclient-1.4.6-cp37-cp37m-win32.whl
+#mysqlclient @ file:///C:/Users/navid/Downloads/mysqlclient-1.4.6-cp37-cp37m-win32.whl
 paramiko==2.7.1
 posts==0.2.2
 psycopg2==2.8.5
 pycparser==2.20
-PyNaCl==1.3.0
+PyNaCl==1.4.0
 pytz==2020.1
 rcssmin==1.0.6
 rjsmin==1.1.0
