--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,38 @@
 appdirs==1.4.4
-asgiref==3.2.7
-asn1crypto==1.3.0
-bcrypt==3.1.7
-cffi==1.14.0
-cryptography==2.9.2
-distlib==0.3.0
-Django==3.0.7
+asgiref==3.4.1
+asn1crypto==1.4.0
+autopep8==1.5.7
+backports.entry-points-selectable==1.1.0
+bcrypt==3.2.0
+certifi==2021.5.30
+cffi==1.14.6
+cryptography==3.4.7
+distlib==0.3.2
+Django==3.2.5
 django-appconf==1.0.4
-django-compressor==2.4
-django-mysql==3.6.0
-fabric==2.5.0
+django-compressor==2.4.1
+django-mysql==3.12.0
+fabric==2.6.0
 filelock==3.0.12
-importlib-metadata==1.6.1
-invoke==1.4.1
-# mysqlclient @ file:///C:/Users/navid/Downloads/mysqlclient-1.4.6-cp37-cp37m-win32.whl
-paramiko==2.7.1
+importlib-metadata==4.6.1
+invoke==1.6.0
+mysqlclient==2.0.3
+paramiko==2.7.2
+pathlib2==2.3.6
+platformdirs==2.0.2
 posts==0.2.2
-psycopg2==2.8.5
+psycopg2==2.9.1
+pycodestyle==2.7.0
 pycparser==2.20
 PyNaCl==1.4.0
-pytz==2020.1
+pytz==2021.1
 rcssmin==1.0.6
 rjsmin==1.1.0
-six==1.15.0
-sqlparse==0.3.1
-virtualenv==20.0.23
-zipp==3.1.0
+six==1.16.0
+sqlparse==0.4.1
+style==1.1.6
+toml==0.10.2
+update==0.0.1
+virtualenv==20.6.0
+virtualenv-clone==0.5.4
+zipp==3.5.0
