--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,25 +1,22 @@
-version: "3.8"
-services:
-  nginx:
-    image: nginx:1.21.1-alpine
+version: "3.9"
 
-    ports:
-      - "443:443"
-      - "80:80"
+services:
+  db:
+    container_name: psql
+    image: postgres:13.4-buster
+    restart: always
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=root
 
   django:
-    build: ./Dockerfile
-
-    volumes:
-      -
-
+    container_name: django
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
     ports:
-      - "800:800"
-
-  postgres:
-    image: postgres:13.3-buster
-
-    volumes:
-      -
-    ports:
-          - "5432:5432"
+      - "8000:8000"
+    depends_on:
+      - db
