--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,18 +1,16 @@
-version: "3.9"
+version: "3.7"
 
 services:
   db:
-    container_name: psql
     image: postgres:13.4-buster
     restart: always
-    volumes:
-      - ./data/db:/var/lib/postgresql/data
+
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=root
+      - POSTGRES_PASSWORD=12345678
 
-  django:
+  web:
     container_name: django
     build: .
     command: python manage.py runserver 0.0.0.0:8000
