django works with postgresql

--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 
 services:
-  db:
+  postgresql:
     image: postgres:13.4-buster
     restart: always
 
@@ -10,11 +10,19 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=12345678
 
-  web:
+  django:
     container_name: django
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    # command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      - postgresql
+
+  nginx:
+    image: nginx:1.21.1-alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - django
