--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -20,7 +20,8 @@ services:
       - postgresql
 
   nginx:
-    image: nginx:1.21.1-alpine
+    container_name: nginx
+    build: ./nginx/.
     ports:
       - "80:80"
       - "443:443"
