--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,25 @@
-server {
-    listen: 80;
-    
-    location / {
+upstream wall {
+    server django:8000;
+}
 
+server {
+
+    listen 80;
+
+    location / {
+        proxy_pass http://wall;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 
     location /static/ {
-        
+        root /app/static/;
+
+        proxy_pass http://wall;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect default;
     }
+
 }
