--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@ distlib==0.3.2
 Django==3.2.6
 django-mysql==3.12.0
 django-stubs==1.7.0
+django-stubs-ext==0.2.0
 filelock==3.0.12
+gunicorn==20.1.0
+mypy==0.910
+mypy-extensions==0.4.3
 mysqlclient==2.0.3
 platformdirs==2.2.0
 psycopg2==2.9.1
@@ -14,4 +18,6 @@ python-decouple==3.4
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.1
-virtualenv==20.7.0
+toml==0.10.2
+typing-extensions==3.10.0.0
+virtualenv==20.7.2
