fully dockerized the app

--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -14,16 +14,21 @@ services:
     container_name: django
     build: .
     # command: python manage.py runserver 0.0.0.0:8000
-    ports:
-      - "8000:8000"
+    volumes:
+      - static_volume:/app/static
     depends_on:
       - postgresql
 
   nginx:
     container_name: nginx
     build: ./nginx/.
+    volumes:
+      - static_volume:/app/static
     ports:
       - "80:80"
       - "443:443"
     depends_on:
       - django
+
+volumes:
+  static_volume:
