--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,20 +6,16 @@ server {
 
     listen 80;
 
+    location /static/ {
+        root /app/;
+    }
+
+
     location / {
         proxy_pass http://wall;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
-    }
-
-    location /static/ {
-        root /app/static/;
-
-        proxy_pass http://wall;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect default;
     }
 
 }
