docker seems to be outdated since being written a year ago and no longer working. changing it to work with sqlite for now so it can easily be ran and will come back and fix docker in the future.

--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgresql:
     container_name: postgresql
 
-    image: postgres:13.4-buster
+    image: postgres:14.3-bullseye
     restart: always
 
     volumes:
